<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Mobile Field Test</string>
    
    <!-- Splash Activity Strings -->
    <string name="splash_title">Mobile Network Field Test</string>
    <string name="loading">Loading...</string>
    <string name="checking_sim">Checking SIM cards...</string>
    <string name="no_sim_error">Please insert at least one simcard</string>
    
    <!-- Main Activity Strings -->
    <string name="main_title">Mobile Field Test Prerequisites</string>
    <string name="employee_id">Employee ID\'s:</string>
    <string name="model">Model:</string>
    <string name="build_version">Build Version:</string>
    <string name="build_type">Build Type:</string>
    <string name="test_area">Test Area:</string>
    <string name="operator_select">Operator Select:</string>
    <string name="next_button">Next</string>
    <string name="reset_fields">Reset Fields</string>
    
    <!-- Build Type Options -->
    <string name="build_type_user">User</string>
    <string name="build_type_debug">Debug</string>
    <string name="build_type_demo">Demo</string>
    
    <!-- Operators -->
    <string name="operator_robi">Robi</string>
    <string name="operator_airtel">Airtel</string>
    <string name="operator_grameenphone">GrameenPhone</string>
    <string name="operator_banglalink">Banglalink</string>
    <string name="operator_teletalk">Teletalk</string>
    
    <!-- Validation Messages -->
    <string name="employee_id_required">Employee ID is required</string>
    <string name="model_required">Model is required</string>
    <string name="build_version_required">Build Version is required</string>
    <string name="test_area_required">Test Area is required</string>
    <string name="operator_required">Please select at least one operator</string>
    <string name="fields_cleared">All fields have been cleared</string>
    
    <!-- General -->
    <string name="hint_employee_id">Enter Employee ID</string>
    <string name="hint_model">Enter Model Name</string>
    <string name="hint_build_version">Enter Build Version</string>
    <string name="hint_test_area">Enter Test Area Location</string>
</resources>